--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,5 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script:
-  - python src/luminol/tests/run_tests.py
-  - python src/luminol/tests/test_anomaly_detector.py
+script: python src/luminol/tests/run_tests.py
+#   - python src/luminol/tests/test_anomaly_detector.py
