--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python:
   - 2.7_with_system_site_packages
-  # - 3.6_with_system_site_packages
+  - 3.6_with_system_site_packages
 
 before_install:
-    - sudo apt-get install -qq python-numpy python-scipy
+  - sudo apt-get install -qq python-numpy python-scipy
 
 install: pip install -r requirements.txt
 
