--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ install:
   - pip install -r requirements.txt
   - pip install pylama pytest pytest-cov
 
-before_script: pylama -i E501,E111,E127,E128,E402,E303 src/ || true
+before_script: python -m pylama -i E501 src/ || true
 script: python -m pytest --cov=src/ src/luminol/tests/
+after_script: echo "pylama issues" $(python -m pylama -i E501 src/ | wc -l)
