--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,5 @@ install:
   - pip install -r requirements.txt
   - pip install pylama pytest pytest-cov
 
-before_script: python -m pylama -i E501,E128 src/ || true
-script: python -m pytest --cov=src/ src/luminol/tests/
-after_script: echo "pylama issues" $(pylama -i E501,E128 src/ | wc -l)
+before_script: python -m pylama -i E501 luminol/
+script: python -m pytest --cov=luminol/ tests/
