--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
   - pip install pytest pytest-cov pylama
 
 script: python -m pytest --cov=src/luminol/ src/luminol/tests/
-after_script: python -m pylama -i E501,E402 src/luminol/ || true
+after_script: python -m pylama -i E501,E402,E0602 src/luminol/ || true
